package com.example.alugueiscarros.enums;

public enum ContratoTipo {
    CLIENTE_PROPRIETARIO,
    EMPRESA_PROPRIETARIA,
    BANCO_PROPRIETARIO
}
