package com.example.alugueiscarros.enums;

public enum PedidoStatus {
    PENDENTE,
    APROVADO,
    REJEITADO,
    CANCELADO
}
