package com.example.alugueiscarros.enums;

public enum TipoParecer {
    POSITIVO,
    NEGATIVO,
    AVALIANDO
}
